<resources>
    <string name="app_name">Application</string>
    <string name="sample">Rajabi.Milad@Gmail.com</string>

    <string name="devils_men">Devils Men</string>
    <string name="devils_men_desc">در خلاصه داستان این فیلم اکشن و مهیج آمده است ، یک کماندوی حرفه‌ای و باتجربه به نا کالینز برای تعقیب و ردیابی یک خلافکار به شهر لندن می‎رود و همین امر باعث می‎شود او وارد جنگی ناخواسته با یک فرمانده‎ی سابق و کل نیروهایش شود و…</string>

    <string name="last_laugh">Last Laugh</string>
    <string name="last_laugh_desc">نورم از شمال ۲ ، فیلمی انیمیشنی محصول سال ۲۰۱۸ به کارگردانی ریچارد فین و تام مالتبای می‎باشد. در خلاصه داستان قسمت دوم این فیلم آمده است ، نورم یک خرس قطبی و پادشاه قطب شمال ، می‎بایست شهر نیویورک و خانه‎اش را نجات دهد. اما…</string>
    <string name="norm">Norm</string>
    <string name="norm_desc">‎ای به نام ال هارت را دنبال می‎کند که بعد از سال‎ها یکی از مشتریان سابق خود به نام بادی گرین را ملاقات می‎کند که پنجاه سال قبل کار کمدی را رها کرده بود. در این بین ال او را متقاعد می‎کند که با هم از خانه‎ی سالمندانی که در آن ساکن هستند فرار کنند و یک تور کمدی در سرتاسر کشور برپا کنند و…</string>

    <string name="pledge">Pledge</string>
    <string name="pledge_desc">‎باشد. داستان این فیلم درباره‎ی گروهی از تازه‎واردان دانشگاهی است که به یکی از انجمن‎های برادری دعوت می‎شوند. اما آنها پس از مدتی متوجه می‎گردند که فریب خورده‎اند و قضیه فراتر از آن چیزی است که تصور می‎کرده‎اند و…</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_basic_android">BasicAndroidActivity</string>
    <string name="type_your_message">Type your message ....</string>
    <string name="firstMessage">Write your first message...</string>

    <!-- Custom_List -->

    <string name="Pledge">Pledge</string>
    <string name="Pledge_desc">تعهد ، فیلمی ترسناک و مهیج محصول سال ۲۰۱۸ به کارگردانی دنیل رابینز می‎باشد. داستان این فیلم درباره‎ی گروهی از تازه‎واردان دانشگاهی است که به یکی از انجمن‎های برادری دعوت می‎شوند. اما آنها پس از مدتی متوجه می‎گردند که فریب خورده‎اند و قضیه فراتر از آن چیزی است که تصور می‎کرده‎اند و…</string>

    <string name="WhiteChamber">White Chamber </string>
    <string name="WhiteChamber_desc">اتاق سفید ، فیلمی علمی تخیلی محصول سال ۲۰۱۸ به کارگردانی پل راسچید می‎باشد. در خلاصه داستان این فیلم آمده است ، یک غریبه در یک سلول سفید رنگ مکعبی شکل عجیب و غریب بیدار می‎شود. اسیرکنندگانش او را برای اطلاعاتش شکنجه می‎کنند ، اطلاعاتی که وی ادعا می‎کند ندارد. اما… </string>

    <string name="Highwaymen">Highwaymen</string>
    <string name="Highwaymen_desc">راهزن‌ها ، فیلمی جنایی و مهیج محصول سال ۲۰۱۹ به کارگردانی جان لی هنکاک می‎باشد. این فیلم روایتگر داستان دو تن از افسران پلیس بازنشسته به نام‎های فرانک و مینی می‎باشد که به منظور یافتن خلافکاران مشهور بانی و کلاید دست به کار می‎شوند. غافل از اینکه…</string>
    <string name="DogsWayHome">A Dogs Way Home</string>
    <string name="DogsWayHome_desc">مسیر خانه سگ ، فیلمی ماجرایی و خانوادگی محصول سال ۲۰۱۹ به کارگردانی چارلز مارتین اسمیت می‎باشد. در خلاصه داستان این فیلم آمده است ، یک سگ بازیگوش و وفادار برای یافتن صاحب خود حدود چهارصد مایل را در سراسر طبیعت کلرادو طی می‎کند و…</string>
    <!-- Custom_List -->

    <!-- RCL -->
    <string name="sina_shabankhani">سینا شعبانخانی</string>
    <string name="Sina_Shabankhani_song">هیشکی نگو</string>
    <string name="sina_shabankhani_image">behishkinagoo</string>
    <string name="sina_shabankhani_like">100</string>
    <string name="sina_shabankhani_view">950</string>
    <string name="sina_shabankhani_comment">950</string>
    <string name="sina_shabankhani_date">9 فروردین 1398 </string>


    <string name="omid_shabani">امید شعبانی</string>
    <string name="omid_shabani_song">دورت بگردم</string>
    <string name="omid_shabani_image">doretbegardam</string>
    <string name="omid_shabani_like">130</string>
    <string name="omid_shabani_view">350</string>
    <string name="omid_shabani_comment">350</string>
    <string name="omid_shabani_date">7 فروردین 1398 </string>


    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="status">Status</string>
    <string name="Clicked">Clicked</string>
    <string name="add_new_note">Add New Note</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- RCL -->

    <!-- StartPermission -->
    <string name="checkPermission">Check Permission</string>
    <string name="permissionGranted">Permission Granted</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="title">Title</string>
    <string name="farsiTitle">عنوان</string>
    <string name="message">Message</string>


    <!-- EndPermission -->

    <string name="clr">#448a8a8c</string>

</resources>
