<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chatBG">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/frgBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp8"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="@dimen/dp8"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                app:tint="@color/White" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sample"
                android:textColor="@color/White"
                android:textSize="15sp" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bluechtbg"></ImageView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclChat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lnlChatWrite"
        android:layout_below="@id/appBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNoMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/firstMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        android:textStyle="italic" />

    <RelativeLayout

        android:id="@+id/lnlChatWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/White"
        android:paddingLeft="@dimen/dp8"
        android:paddingTop="@dimen/dp8"
        android:paddingBottom="@dimen/dp8">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTxtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/imgSend"
            android:layout_toLeftOf="@id/imgSend"
            android:hint="@string/type_your_message"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:paddingBottom="@dimen/dp16"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSend"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/dp8"
            app:srcCompat="@drawable/ic_send_black_24dp"
            app:tint="@color/telegramColor" />


    </RelativeLayout>

</RelativeLayout>